MonetDB5/src/mal/Tests/tst3030.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet5/Linux/var/MonetDB/dbfarm
# dbname:demo
##Parsing properties and keeping them around
## note the use of the first parameter to obtain property set
#function newsemijoin(A:bat[:int{sorted,dense},:any$1], 
#w:=new(:{sequence},int);
#print(1);
#y:int{+sorted}:=sort(w);
#
!ERROR: function newsemijoin(A:bat[:int{sorted,dense},:any$1], 
!                                       ^',' expected
!ERROR: end newsemijoin;
!       ^',' expected
!ERROR: z:=new(:int{sorted},int);
!      ^<identifier> or <operator> expected
!ERROR: w:=new(:{sequence},int);
!               ^Type identifier expected
!ERROR: w:bat[int,int]:=new(:int,:int);
!      ^<type identifier> expected
!ERROR: y:=sort(w:bat[int,int]{sorted,dense});
!      ^',' expected
!ERROR: y:int{+sorted}:=sort(w);
!            ^'.' or '(' expected
function Admin.newsemijoin(A:any):any;	# 0  unknown (newsemijoin:any)<-(A:any)
    $2;	# 1  unknown ($2:any)
    w := new(any:);	# 2  unknown (w:any)<-($4:any)
    print(1);	# 3  unknown ($5:any)<-($6:int)
    y;	# 4  unknown (y:int)
end newsemijoin;	# 5  unknown 
>